# stf_blender

./: .gitignore  .gitmodules  LICENSE-MIT  __init__.py  auto_load.py  blender_manifest.toml  bpydev.py  build_extension.py  pyproject.toml  readme.adoc  readme.md  requirements.txt
.zed/: debug.json  tasks.json
docs/: user_guide.adoc
libstf/: buffer_utils.py  export_context.py  stf_definition.py  stf_exception.py  stf_export_context.py  stf_export_state.py  stf_file.py  stf_import_context.py  stf_import_state.py  stf_module.py  stf_processor.py  stf_registry.py  stf_report.py  stf_resource.py  stf_util.py
libstf/resource_types/: stf_armature.py  stf_image.py  stf_instance_armature.py  stf_instance_mesh.py  stf_instance_prefab.py  stf_material.py  stf_mesh.py  stf_node_spatial.py  stf_prefab.py  stf_texture.py
stf_blender_common/: __init__.py  readme.md
stf_blender_common/base/: __init__.py  (+2 more)
stf_blender_module_template/: __init__.py  blender_manifest.toml  stf_dependency_import.py  template_stf_component_module.py  template_stf_data_module.py  template_stf_data_resource.py
stf_blender_resource_template/: .gitignore  __init__.py  readme.md  stf_dependency_import.py  template_stf_component_resource.py  template_stf_data_resource.py
stfblender/: __init__.py  blender_component_registry.py  blender_root_properties.py  collection_panel.py  component_utils.py  exporter.py  id_utils.py  importer.py  package_key.py  preferences.py  root_properties.py  stf_docs.py  stf_file_handler.py  stf_meta.py
testsuite/: readme.md  requirements.txt  run_testsuite.py  test.py
(+604 files in other folders)
